# synthetic_compliance_qa

./: .gitignore  Makefile  README.md  eval_summary.md  failure_catalogue.md  judge_validation.md  pyproject.toml  run.py
audit/: improvement_delta.md  ps_category_audit.jsonl  ps_category_audit.md  ps_category_audit_v2.jsonl  ps_category_audit_v2.md  ps_category_audit_v3.jsonl  ps_category_audit_v3.md  ps_category_audit_v4.jsonl  ps_category_audit_v4.md
data/: clause_map.json  pageindex_tree.json  razorpay_tos.html  razorpay_tos.md  razorpay_tos.meta.json
docs/: journey.md
eval/: hand_labels.jsonl
pipeline/: __init__.py  failure_catalogue.py  judge.py  judge_validation.py  llm.py  metrics.py  pricing.json  regen.py  retrieval.py  schema.py  validator.py
pipeline/generators/: __init__.py  a.py  b.py  c.py  common.py
prompts/: gen_a_v1.md  gen_b_v1.md  gen_c_v1.md
prompts/judges/: ambiguity_framing_v1.md  category_fit_v1.md  citation_accuracy_v1.md  clarifier_quality_v1.md  clarity_v1.md  grounding_v1.md
runs/2026-04-21T085610Z/: dataset.jsonl  dropped.jsonl  judge_validation.json  metrics.json  report.md  topup_metrics.json
runs/2026-04-22-v4/: dataset.jsonl  dropped.jsonl  failure_catalogue.md  metrics.json  report.md  (+2 more)
schemas/: dataset.schema.json
tests/: test_clause_map.py  test_generators.py  test_judge.py  test_llm_stub.py  test_metrics.py  test_pipeline_dry_run.py  test_retrieval.py  test_schema.py  test_validator.py
tools/: build_hand_labels.py  build_pageindex_tree.py  clause_map_check.py  fetch_tos.py  final_verify.py  topup.py
(+3 files in other folders)
