[project]
name = "razorpay-qa-pipeline"
version = "0.1.0"
description = "Synthetic Q&A dataset pipeline for Razorpay ToS"
requires-python = ">=3.12"
dependencies = [
  "anthropic>=0.40.0",
  "openai>=1.50.0",
  "trafilatura>=1.12.0",
  "jsonschema>=4.22.0",
  "rich>=13.7.0",
  "tenacity>=9.0.0",
  "tiktoken>=0.7.0",
  "python-dotenv>=1.0.0",
  "json-repair>=0.30.0",
  "requests>=2.32.0",
  "beautifulsoup4>=4.12.0",
  "lxml>=5.2.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.2.0", "pytest-cov>=5.0.0"]
pageindex = ["pageindex>=0.1.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["pipeline", "pipeline.generators"]
